test/types/records/noakes/complete-2.good
complete-2.chpl:5: In initializer:
complete-2.chpl:10: error: cannot update a const field, "y", in phase 2
